@@ -1,5 +1,9 @@
 2000-08-27  Ulrich Drepper  <drepper@redhat.com>
 
+	* intl/dcigettext.c (DCIGETTEXT): Remove _nl_find_language in code
+	to determine invalid locale name.
+	* locale/findlocale.c (_nl_find_locale): Likewise.
+
 	* posix/annexc.c: Correct test for unavailable feature.
 
 	* sysdeps/unix/sysv/linux/i386/sys/io.h (outw): Fix __INLINE ->
